third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/float/inf-capital.stderr
TOML parse error at line 1, column 5
  |
1 | v = Inf
  |     ^
invalid string
expected `"`, `'`
